--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "GradedUnit",
-    "version": "1.0.0",
+    "version": "1.4.2",
     "keywords": ["util", "functional", "server", "client", "browser"],
-    "author": "Deann",
+    "author": "Dean Reid",
     "contributors": [],
     "dependencies": {}
 }
