started adding php classes for users

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 /nbproject/private/
+public_html/client/_notes/dwsync.xml
+public_html/_notes/dwsync.xml
+public_html/css/_notes/dwsync.xml
+public_html/images/_notes/dwsync.xml
