--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,11 @@
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 file.reference.GradedUnit-public_html=public_html
 file.reference.GradedUnit-test=test
+file.reference.GradedUnitRaw-public_html=public_html
 files.encoding=UTF-8
-site.root.folder=${file.reference.GradedUnit-public_html}
-test.folder=${file.reference.GradedUnit-test}
+site.root.folder=${file.reference.GradedUnitRaw-public_html}
